--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <meta charset="utf-8">
 <title>HTML 5 Doc</title>
 	<style>
+		
+		.sidebar {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 160px; /* Set the width of the sidebar */	
+margin-right: 0;
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #111; /* Black */
+  padding-top: 20px;
+}
+
+		
 		body,html {padding: 0; margin: 0}
 		header h1 { text-align:center;
 		font-family: arial, helvetica;
@@ -21,6 +33,14 @@
 	</style>
 </head>
 <body>
+	<div class="sidebar">
+  		<a href="#">cool</a>
+  		<a href="#">stuff</a>
+  		<a href="#">over</a>
+  		<a href="#">here</a>
+	</div>
+	
+	
 	<header>
 	<h1>Header</h1>
 	</header>
