--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 	<style>
 		
 		.sidebar {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */	
-margin-right: 0;
-  background-color: #111; /* Black */
+  width: 25%;
+			height: 80%
+			float: right;
   padding-top: 20px;
 }
 
