--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<style>
 		
 		.sidebar {
+			margin-top: 2%;
  		 	width: 25%;
 			height: 80%
 			float: right;
+			background-color: #878787;
 		}
 
 		
