--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 		
 		.sidebar {
 			margin-top: 2%;
- 		 	width: 25%;
-			height: 80%
 			float: right;
+			background-color: #AD3DCB;
+			height: 80%;
+			width: 75%;
+		}
+		
+		.main {
+			margin-top: 2%;
+			float: left;
+			height: 80%;
+			width: 75%;
 			background-color: #AD3DCB;
 		}
 
@@ -57,6 +65,10 @@
   		<a href="#">stuff</a>
   		<a href="#">over</a>
   		<a href="#">here</a>
+	</div>
+	
+	<div class="main">
+		<h1>stuff</h>
 	</div>
 	
 </body>
