--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			float: right;
 			background-color: #AD3DCB;
 			height: 80%;
-			width: 75%;
+			width: 20%;
 		}
 		
 		.main {
@@ -18,7 +18,7 @@
 			float: left;
 			height: 80%;
 			width: 75%;
-			background-color: #AD3DCB;
+			background-color: white;
 		}
 
 		
