--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			background-color: #AD3DCB;
 			height: 80%;
 			width: 20%;
+			display: table-cell;
 		}
 		
 		.main {
@@ -23,7 +24,7 @@
 
 		
 		body,html {padding: 0; margin: 0}
-		header h1 { text-align:center;
+		header h1 { text-align:center;background-color: #878787;
 		font-family: arial, helvetica;
 		font-size: 30px;
 		}
