--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		}
 
 		
-		body,html {padding: 0; margin: 0}
+		body,html {padding: 0; margin: 0; background-color: #878787}
 		header h1 { text-align:center;background-color: #878787;
 		font-family: arial, helvetica;
 		font-size: 30px;
