--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<style>
 		
 		.sidebar {
-			margin-top: 2%;
+			margin-top: .5%;
 			float: right;
 			background-color: #AD3DCB;
 			height: 80%;
@@ -15,10 +15,10 @@
 		}
 		
 		.main {
-			margin-top: 2%;
+			margin-top: .5%;
 			float: left;
 			height: 80%;
-			width: 75%;
+			width: 19.5%;
 			background-color: white;
 		}
 
