--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
 	</nav>
 	
 	<div class="sidebar">
-  		<a href="#">cool</a>
-  		<a href="#">stuff</a>
-  		<a href="#">over</a>
-  		<a href="#">here</a>
+		<h1>Related</h1>
+  		<a href="#">Oh I do like to be beside the seaside</a>
+  		<a href="#">Oh I do like to be beside the sea</a>
+  		<a href="#">Although in the North of England</a>
+  		<a href="#">It never stops raining</a>
+		<a href="#">Oh well...</a>
 	</div>
 	
 	<div class="main">
