--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		.sidebar {
 			margin-top: .5%;
 			float: right;
+			float: bottom;
 			background-color: #AD3DCB;
 			height: 80%;
 			width: 20%;
@@ -17,8 +18,9 @@
 		.main {
 			margin-top: .5%;
 			float: left;
+			float: bottom;
 			height: 80%;
-			width: 19.5%;
+			width: 79.5%;
 			background-color: white;
 		}
 
