--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			background-color: #AD3DCB;
 			height: 80%;
 			width: 20%;
+			display: table-row;
 		}
 		
 		.main {
@@ -19,6 +20,7 @@
 			height: 80%;
 			width: 79.5%;
 			background-color: white;
+			display: table-row;
 		}
 
 		
