--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
 			margin-top: .5%;
 			float: right;
 			background-color: #AD3DCB;
-			height: 80%;
 			width: 20%;
-			display: table-row;
+			display: table-cell;
 		}
 		
 		.main {
 			margin-top: .5%;
 			float: left;
-			height: 80%;
 			width: 79.5%;
 			background-color: white;
-			display: table-row;
+			display: table-cell;
 		}
 
 		
-		body,html {padding: 0; margin: 0; background-color: #878787}
+		body,html {padding: 0; margin: 0; background-color: #878787; display: table}
 		header h1 { text-align:center;background-color: #878787;
 		font-family: arial, helvetica;
 		font-size: 30px;
