--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		}
 
 		
-		body,html {padding: 0; margin: 0; background-color: #878787; display: table}
+		body,html {padding: 0; margin: 0; background-color: #878787; display: table; height: 100%}
 		header h1 { text-align:center;background-color: #878787;
 		font-family: arial, helvetica;
 		font-size: 30px;
