--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			float: right;
 			background-color: #AD3DCB;
 			width: 20%;
-			display: table-cell;
+			height: 99.5%;
 		}
 		
 		.main {
@@ -18,11 +18,11 @@
 			float: left;
 			width: 79.5%;
 			background-color: white;
-			display: table-cell;
+			height: 99.5%;
 		}
 
 		
-		body,html {padding: 0; margin: 0; background-color: #878787; display: table; height: 100%}
+		body,html {padding: 0; margin: 0; background-color: #878787; height: 100%}
 		header h1 { text-align:center;background-color: #878787;
 		font-family: arial, helvetica;
 		font-size: 30px;
