--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
 	
 	<div class="sidebar">
 		<h1>Related</h1>
-  		<a href="#">Oh I do like to be beside the seaside</a>
-  		<a href="#">Oh I do like to be beside the sea</a>
-  		<a href="#">Although in the North of England</a>
-  		<a href="#">It never stops raining</a>
-		<a href="#">Oh well...</a>
+		<ul>
+			<li><a href="#">Oh I do like to be beside the seaside</a></li>
+			<li><a href="#">Oh I do like to be beside the sea</a></li>
+  			<li><a href="#">Although in the North of England</a></li>
+  			<li><a href="#">It never stops raining</a></li>
+			<li><a href="#">Oh well...</a></li>
+		</ul>
 	</div>
 	
 	<div class="main">
