--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		color: #fff; padding: 20px 40px; width: 100%; box-sizing: border-box;}
 		
 		nav { background-color: #AD3DCB; padding: 15px 0;}
-		nav a {padding: 60px; color: #fff; font-size: 19px; text-decoration: none;}
+		nav a {padding: 60px; color: #fff; font-size: 19px; text-decoration: none; margin-left: 80px;}
 		
 		nav ul {list-style-type:none; }
 		nav ul li {display: inline-block}
