--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		font-family: arial, helvetica;
 		font-size: 30px;
 		}
+		h1 {text-align:center}
 		header {background-color: #878787;
 		color: #fff; padding: 20px 40px; width: 100%; box-sizing: border-box;}
 		
