--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 			height: 99.5%;
 		}
 
-		
+		footer{
+		margin-top: .5%;
+		}
 		body,html {padding: 0; margin: 0; background-color: #878787; height: 100%}
 		header h1 { text-align:center;background-color: #878787;
 		font-family: arial, helvetica;
@@ -75,6 +77,10 @@
 	<div class="main">
 		<h1>stuff</h>
 	</div>
+	
+	<footer>
+		<p>Copyright Spencer Dai. Don't mess with my shit!</p>
+	</footer>
 	
 </body>
 </html>
