--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 			background-color: #AD3DCB;
 			width: 20%;
 			height: 99.5%;
+			margin-bottom: .5%;
 		}
 		
 		.main {
 			margin-top: .5%;
+			margin-bottom: .5%;
 			float: left;
 			width: 79.5%;
 			background-color: white;
@@ -22,7 +24,9 @@
 		}
 
 		footer{
-		margin-top: .5%;
+			margin-top: .5%;
+			background-color: white;
+			
 		}
 		body,html {padding: 0; margin: 0; background-color: #878787; height: 100%}
 		header h1 { text-align:center;background-color: #878787;
