--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 			background-color: #AD3DCB;
 			width: 20%;
 			height: 99.5%;
-			margin-bottom: .5%;
 		}
 		
 		.main {
 			margin-top: .5%;
-			margin-bottom: .5%;
 			float: left;
 			width: 79.5%;
 			background-color: white;
@@ -24,6 +22,8 @@
 		}
 
 		footer{
+			float: bottom;
+			width: 100%;
 			margin-top: .5%;
 			background-color: white;
 			
@@ -83,7 +83,7 @@
 	</div>
 	
 	<footer>
-		<p>Copyright Spencer Dai. Don't mess with my shit!</p>
+		<p>Copyright Spencer Dai. Don't mess with my stuff!</p>
 	</footer>
 	
 </body>
