--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			float: right;
 			background-color: #AD3DCB;
 			width: 20%;
-			height: 99.5%;
+			height: 89.5%;
 		}
 		
 		.main {
@@ -18,10 +18,11 @@
 			float: left;
 			width: 79.5%;
 			background-color: white;
-			height: 99.5%;
+			height: 89.5%;
 		}
 
-		footer{
+		copy{
+			height: 10%;
 			width: 100%;
 			margin-top: .5%;
 			background-color: white;
@@ -81,11 +82,12 @@
 		<h1>stuff</h>
 	</div>
 	
+	<div class="copy">
+		<p>Copyright Spencer Dai. Don't mess with my stuff!</p>
+	</div>
 	
 	
 </body>
 	
-<footer>
-		<p>Copyright Spencer Dai. Don't mess with my stuff!</p>
-</footer>
+
 </html>
