--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			width: 100%;
 			margin-top: .5%;
 			background-color: white;
-			
+			float: bottom;
 		}
 		body,html {padding: 0; margin: 0; background-color: #878787; height: 100%}
 		header h1 { text-align:center;background-color: #878787;
