--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		copy{
 			height: 10%;
 			width: 100%;
-			margin-top: .5%;
+			padding-top: 60px;
 			background-color: white;
 			float: bottom;
 		}
