--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		}
 
 		.copy{
+			bottom: 0;
 			height: 9.5%;
 			width: 100%;
 			background-color: white;
-			float: bottom;
 		}
 		body,html {padding: 0; margin: 0; background-color: #878787; height: 100%}
 		header h1 { text-align:center;background-color: #878787;
