--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			float: right;
 			background-color: #AD3DCB;
 			width: 20%;
-			height: 89.5%;
+			height: 99%;
 		}
 		
 		.main {
@@ -18,12 +18,10 @@
 			float: left;
 			width: 79.5%;
 			background-color: white;
-			height: 89.5%;
+			height: 99%;
 		}
 
-		.copy{
-			bottom: 0;
-			height: 9.5%;
+		footer{
 			width: 100%;
 			background-color: white;
 		}
@@ -81,12 +79,12 @@
 		<h1>stuff</h>
 	</div>
 	
-	<div class="copy">
-		<p>Copyright Spencer Dai. Don't mess with my stuff!</p>
-	</div>
 	
 	
 </body>
-	
+
+	<footer>
+		<p>Copyright Spencer Dai. Don't mess with my stuff!</p>
+	</footer>
 
 </html>
