--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 		font-family: arial, helvetica;
 		font-size: 30px;
 		}
-		h1 {text-align:center}
+		h1 {text-align:center; font-size: 30px}
+		h2 {text-alight: left; font-size: 30px}
 		header {background-color: #878787;
 		color: #fff; padding: 20px 40px; width: 100%; box-sizing: border-box;}
 		
@@ -80,6 +81,10 @@
 	
 	<div class="main">
 		<h1>stuff</h>
+		<h2>more stuff!</h2>
+		<p>stuff that no one cares about!</p>
+		<h2>even more stuff!</h2>
+		<p>what even is this?</p>
 	</div>
 	
 	
