--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			background-color: #AD3DCB;
 			width: 20%;
 			height: 99%;
+			line-height: 1.25;
 		}
 		
 		.main {
@@ -23,8 +24,8 @@
 
 		footer{
 			width: 100%;
-			background-color: white;
 		}
+		
 		body,html {padding: 0; margin: 0; background-color: #878787; height: 100%}
 		header h1 { text-align:center;background-color: #878787;
 		font-family: arial, helvetica;
@@ -48,7 +49,7 @@
 	
 	
 	<header>
-	<h1>Title</h1>
+	<h1>Header</h1>
 	</header>
 	<nav>
 	<ul>
@@ -77,7 +78,7 @@
 	</div>
 	
 	<div class="main">
-		<h1>stuff</h>
+		<h1>Article Heading</h>
 		<h2>more stuff!</h2>
 		<p>stuff that no one cares about!</p>
 		<h2>even more stuff!</h2>
