--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 	<li><a href="#">Contact</a></li>
 	<li>
 	<form>
-	<input type='text' name='search'>
-	<input type = 'submit' value = "Search">
+	<input type='text' name='search' value = "Search query">
+	<input type = 'submit' value = "Go!">
 	</form>
 	</li>
 	</ul>
